src/objects/Revenue_Period__c.object
<CustomObject>
    <fields>
        <fullName>Deferred_Balance_Actual__c</fullName>
        <label>Deferred Balance (Actual)</label>
        <summarizedField>Revenue_Transaction__c.Deferred_Balance__c</summarizedField>
        <summaryForeignKey>Revenue_Transaction__c.Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deferred_Balance_Projected__c</fullName>
        <label>Deferred Balance (Projected)</label>
        <summarizedField>Revenue_Forecast__c.Deferred_Balance__c</summarizedField>
        <summaryForeignKey>Revenue_Forecast__c.Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Revenue_Amount_Actual__c</fullName>
        <label>Revenue Amount (Actual)</label>
        <summarizedField>Revenue_Transaction__c.Revenue_Amount__c</summarizedField>
        <summaryForeignKey>Revenue_Transaction__c.Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revenue_Amount_Projected__c</fullName>
        <label>Revenue Amount (Projected)</label>
        <summarizedField>Revenue_Forecast__c.Revenue_Amount__c</summarizedField>
        <summaryForeignKey>Revenue_Forecast__c.Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revenue_Period_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Period Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Period_End_Date__c</fullName>
        <label>Revenue Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Period_Start_Date__c</fullName>
        <label>Revenue Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>Revenue Period</label>
    <nameField>
        <label>Revenue Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>